# complete_ai_tutor

./: .gitignore  README.md  ppt.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/controllers/: auth.py  certificates.py  chats.py  courses.py  flashcards.py  interactions.py  lessons.py  payments.py  presentations.py  progress.py  quizzes.py
backend/app/models/: __init__.py  certificate.py  chat.py  course.py  enums.py  flashcard.py  interaction.py  lesson.py  payment.py  presentation.py  progress.py  quiz.py  user.py
backend/app/routers/: auth.py  certificates.py  chats.py  courses.py  flashcards.py  interactions.py  lessons.py  payments.py  presentations.py  progress.py  quizzes.py  tts_and_stt.py
backend/app/schemas/: __init__.py  certificate.py  chat.py  course.py  flashcard.py  interaction.py  lesson.py  payment.py  presentation.py  progress.py  quiz.py  token.py  user.py
backend/app/services/: architect_agent.py  auth_service.py  certificate_service.py  payment_service.py  ppt_agent.py  tts_and_stt.py  tutor_agent.py  tutor_tools.py
backend/app/services/templates/: certificate.html
backend/test/: calculator_tool.py  google_translator_tool.py  image_search_tool.py  main.py  simple_tts_stt_test.py  tts_and_stt.py  web_search_tool.py  youtube_search_tool.py
frontend/: .gitignore  index.html  openapi.json  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/context/: AuthContext.jsx  PaymentContext.jsx
frontend/src/hooks/: useVoiceRecorder.js
frontend/src/pages/: AITutorChat.jsx  Certificates.jsx  CourseDetails.jsx  Dashboard.jsx  Flashcards.jsx  LandingPage.jsx  LessonPlayer.jsx  LoginPage.jsx  MyCourses.jsx  Payments.jsx  Privacy.jsx  Progress.jsx  RegisterPage.jsx  Terms.jsx  TextToSpeech.jsx
frontend/src/services/: api.js  chatService.js  courseService.js  flashcardService.js
(+10 files in other folders)
