[project]
name = "complete-ai-tutor-platform"
version = "0.1.0"
description = "AI Tutor Platform with Multi-Agent System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiomysql>=0.2.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.17",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.1",
    "bcrypt==3.2.2",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=1.1.2",
    "ddgs>=9.12.0",
    "youtube-search-python>=1.6.6",
    "youtube-search>=2.2.0",
    "googletrans>=4.0.2",
    "duckduckgo-search>=8.1.1",
    "gtts>=2.5.4",
    "whispercpp>=0.0.17",
    "openai-whisper>=20250625",
    "jinja2>=3.1.0",
    "psycopg2-binary>=2.9.11",
    "asyncpg>=0.31.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
